# LLM-DIAL

./: .gitignore  COMPTE_RENDU_PROF.md  README.md  pyproject.toml
data/: banking77_test.csv  banking77_train.csv  clinc150_test.csv  demo_support_utterances.csv  massive_en_us_test.csv  massive_en_us_train.csv  mtop_en_test.csv
dialin_llm/: __init__.py  cli.py  clustering.py  embeddings.py  final_campaign.py  io.py  iterative.py  llm_utils.py  merge.py  metrics.py  paper_data.py  plotting.py  sampling.py
docs/: CHAPITRE_REPRODUCTION_PAPIER_FR.md  COMPARAISON_BANKING77_FR.md  COMPARAISON_BANKING77_TOUTES_COMBINAISONS_FR.md  COMPOSANTS_FR.md  COMPTE_RENDU.md  PROMPT_AGENT_SERVER_FR.md  REPRODUCTION_PAPIER_FR.md  RUN_BANKING77_FR.md  RUN_BANKING77_LOCAL_MISTRAL_GPU1_FR.md  RUN_BANKING77_LOCAL_MISTRAL_GPU1_ST_FR.md  RUN_BANKING77_LOCAL_MISTRAL_GPU1_ST_TMAX_1_TO_6_FR.md  RUN_DEMO_FR.md  RUN_MASSIVE_FR.md  SYNTHESE_BANKING77_FR.md  SYNTHESE_BANKING77_MISTRAL_ST_TMAX_1_6_FR.md
report/: README.md  build.ps1  main.tex  references.bib
report/chapters/: 01_etat_art.tex  01_introduction.tex  02_reproduction_papier.tex  03_perspectives.tex  04_synthese_comparative.tex  05_conclusion.tex
tests/: test_evaluation.py  test_final_campaign.py  test_iterative_loop.py  test_local_llm_utils.py  test_merge.py  test_paper_data.py  test_plotting.py  test_sampling.py
tools/: jupyter_exec.py  run_final_campaign.py
